# parse_wiki_text

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
examples/test/: main.rs  test.rs  test_cases.rs
src/: bold_italic.rs  case_folding_simple.rs  character_entity.rs  comment.rs  configuration.rs  default.rs  external_link.rs  heading.rs  html_entities.rs  lib.rs  line.rs  link.rs  list.rs  magic_word.rs  parse.rs  positioned.rs  redirect.rs  state.rs  table.rs  tag.rs  template.rs  trie.rs  warning.rs
